# claude-usage-counter

./: .gitignore  IMPLEMENTATION_PLAN.md  Package.swift  README.md  build.sh  install.sh  release.sh
Sources/: AppDelegate.swift  ClaudeAIScraper.swift  ContentView.swift  CookieAPIFetcher.swift  FileWatcher.swift  Models.swift  Pricing.swift  ProviderStore.swift  UsageParser.swift  UsageStore.swift  WebAuthController.swift  WebViewFetcher.swift
Sources/Providers/: ClaudeProvider.swift  CodexProvider.swift  GeminiProvider.swift  UsageProvider.swift
windows/: README.md  index.html  install.ps1  install.sh  package-lock.json  package.json
windows/src/: App.css  App.tsx  store.ts  types.ts  utils.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: antigravity_parser.rs  claude_parser.rs  gemini_provider.rs  lib.rs  main.rs  models.rs  tray.rs
windows/src/components/: AntigravitySection.tsx  CompactView.tsx  Footer.tsx  Header.tsx  ProviderSection.tsx  Settings.tsx  UsageBar.tsx
