[package]
name = "ai-usage-counter"
version = "1.3.1"
description = "AI Usage Counter — Windows overlay"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.10"
tokio = { version = "1", features = ["time"] }
url = "2"
anyhow = "1"
